# stealid

./: Caddyfile  Makefile  README.md  deploy.sh  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  traefik.dev.yaml  traefik.prod.yaml
stealid-implant/: .gitignore  CMakeLists.txt  Makefile  build.sh  chrome.go  go.mod  main.go
stealid-implant/stealid-implant/: CMakeLists.txt  stealid-implant.cpp  stealid-implant.h
stealid-pocketbase/: Dockerfile  go.mod  main.go
stealid-pocketbase/migrations/: 1683338213_collections_snapshot.go
stealid-web/: Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.cjs
stealid-web/src/: app.css  app.d.ts  app.html  hooks.server.ts
stealid-web/src/lib/components/: country.svelte  download.svelte  navbar.svelte  user.svelte  view.svelte
stealid-web/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts
stealid-web/src/routes/dashboard/: +layout.svelte  +page.server.ts  +page.svelte
stealid-web/src/routes/dashboard/botnet/: +page.server.ts  +page.svelte
stealid-web/src/routes/dashboard/builder/: +page.server.ts  +page.svelte
stealid-web/src/routes/login/: +page.server.ts  +page.svelte
stealid-web/src/routes/logout/: +server.ts
